elf: Refactor "Print size" option
Replace multiple instances of the option with a single definition in the
base toolchain.

--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -1,6 +1,7 @@
 debug = Debug
 release = Release
 
+# Target processor
 option.target = Target Processor
 option.use_tcf = Use TCF
 option.tcf_path = TCF Path
@@ -20,3 +21,7 @@ option.ea = Extended Arithmetic Instructions (-mea)
 option.xy = DSP XY memory (-mxy)
 option.xy.tip = Passed down to the assembler to enable the XY memory extension. Also sets the preprocessor symbol __Xxy.
 option.dpfplrsr = Forbid LR and SR to use FPX registers (-mno-dpfp-lrsr)
+
+# Additional tools
+option.extratools = Additional Tools
+option.printsize = Print size
