elf: Refactor compiler debugging options
Move them inside of each compiler and avoid subclassing items at
toolchain level.

--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -25,3 +25,6 @@ option.dpfplrsr = Forbid LR and SR to use FPX registers (-mno-dpfp-lrsr)
 # Additional tools
 option.extratools = Additional Tools
 option.printsize = Print size
+
+# Compiler -> Debugging
+option.debugging = Debugging
